
iconsdir = $(pkgdatadir)/icons/hicolor/16x16/panel

icons_DATA =  \
	panel-dummy.png \
	panel-light-audio-volume-high.png \
	panel-light-audio-volume-low.png \
	panel-light-audio-volume-medium.png \
	panel-light-audio-volume-muted.png \
	panel-light-network-wifi-0.png \
	panel-light-network-wifi-1.png \
	panel-light-network-wifi-2.png \
	panel-light-network-wifi-3.png \
	panel-light-network-wifi-4.png \
	panel-light-power-battery-full.png \
	panel-light-power-battery-low.png \
	panel-light-power-battery-medium.png \
	panel-light-power-battery-plugged.png \
	panel-light-power-battery-plug.png \
	panel-light-power-battery-verylow.png \
	panel-light-power-mouse-high.png \
	panel-light-power-mouse-low.png \
	panel-light-power-mouse-verylow.png

EXTRA_DIST = $(icons_DATA)

